--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
               <h1>Contact Me</h1>
-              <span class="subheading">Have questions? I have answers (maybe).</span>
+              <span class="subheading"></span> <!-- Ever want to add a sub heading, heres the place -->
             </div>
           </div>
         </div>
@@ -70,7 +70,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Want to get in touch with me? Fill out the form below to send me a message and I will try to get back to you within 24 hours!</p>
+          <p>Want to get in touch with me? Here is my email, phone number, and address</p
+          <p>Phone: 716-697-4180</p>
           <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
           <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
           <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
