--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Want to get in touch with me? Here is my email, phone number, and address</p
+          <p>Want to get in touch with me? Here is my email, phone number, and address.</p>
+          <p>Email: sscanne2@nd.edu</p>
           <p>Phone: 716-697-4180</p>
+          <p>Address: 228 O'Neil Family Hall <br> University of Notre Dame, Notre Dame <br> 46556, IN</p>
           <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
           <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
           <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
