--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('cover picture.jpg-large')">
+    <header class="masthead" style="background-image: url('dome_full.jpg')">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
