--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('dome_full.jpg')">
+    <header class="masthead" style="background-image: url('img/dome_full.jpg')">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Sea Scannell</h1>
+              <h1>Sean Scannell</h1>
               <span class="subheading">My personal website</span>
             </div>
           </div>
