--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>Sean Scannell</h1>
-              <span class="subheading">My persona website</span>
+              <span class="subheading">My personal website</span>
             </div>
           </div>
         </div>
