--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1><font color="black">Sea Scannell</font></h1>
+              <h1><font color="white" text-outline: 2px 2px #FF0000>Sean Scanell</font></h1>
               <span class="subheading">My personal website</span>
             </div>
           </div>
