--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1><font color="black">Sean Scannell</font></h1>
-              <span class="subheading">My personal website</span>
+              <span class="subheading"><font color="black">My personal website</font></span>
             </div>
           </div>
         </div>
