--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="nav-link" href="about.html"><font color="black">About</font></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post.html"><font color="black">Sample Post</font></a>
+              <a class="nav-link" href="post_index.html"><font color="black">Sample Post</font></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html"><font color="black">Contact</font></a>
