--- a/Projects/SIBC_Beijing_Project.html
+++ b/Projects/SIBC_Beijing_Project.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SIBC Beijing Trip</title>
+    <title>Beijing Trip</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
