--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html"><font color="black">Home</font></a>
+              <a class="nav-link" href="index.html">Home</font></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html"><font color="black">About</font></a>
+              <a class="nav-link" href="about.html">About</font></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post_index.html"><font color="black">Post Index</font></a>
+              <a class="nav-link" href="post_index.html">Post Index</font></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html"><font color="black">Contact</font></a>
+              <a class="nav-link" href="contact.html">Contact</font></a>
             </li>
           </ul>
         </div>
@@ -58,8 +58,8 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1><font color="black">Sean Scannell</font></h1>
-              <span class="subheading"><font color="black" size="20">My personal website</font></span>
+              <h1>Sean Scannell</font></h1>
+              <span class="subheading">My personal website</font></span>
             </div>
           </div>
         </div>
