--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html"><font color="black">Sean Scannell</font></a>
+        <a class="navbar-brand" href="index.html">Sean Scannell</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -36,16 +36,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</font></a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</font></a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post_index.html">Post Index</font></a>
+              <a class="nav-link" href="post_index.html">Post Index</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</font></a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -58,8 +58,8 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Sean Scannell</font></h1>
-              <span class="subheading">My personal website</font></span>
+              <h1>Sean Scannell</h1>
+              <span class="subheading">My personal website</span>
             </div>
           </div>
         </div>
