Flesh out cardinal health description

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="subheading mb-5">228 O'Neill Hall · Jniversity of Notre, IN 46556 · (716) 697-4180 ·
             <a href="mailto:sscanne2@nd.edu">sscanne2@nd.edu</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">GENERAL STATEMENT:I am a Junior Electrical Engineering student at the University of Notre Dame.  Originally I am from Cork, Ireland.  My family moved to Buffalo, New York when I was seven.  I have travaled the world, including a summer in Taiwan and plan on studying abroad in Perth Australia in the Spring of 2018.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
@@ -117,7 +117,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Semester Project with Cardinal Health</h3>
               <div class="subheading mb-3">Student International Business Council, University of Notre Dame</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <p>In the fall of 2017, I have worked on a Student International Business Council project in the STEM Devision.  For this particular project, I been chosen to co-lead a project with Cardinal Health.  THe topic of this project will be
+              cybersecurity, specifically how Cardinal Health should approach security as code in there attempt to protect thier business.  My responsibilities for this project include scheduling team meetings, directing the thought process of the
+              team, and selecting the travel team.  On December 1st, we will travel down to Dublin, Ohio to present our project to a group of employees at Cardinal Health</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Fall 2017</span>
