--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Semester Project with Cardinal Health</h3>
               <div class="subheading mb-3">Student International Business Council, University of Notre Dame</div>
-              <p>In the fall of 2017, I have worked on a Student International Business Council project in the STEM Devision.  For this particular project, I been chosen to co-lead a project with Cardinal Health.  THe topic of this project will be
+              <p>In the fall of 2017, I have worked on a Student International Business Council project in the STEM Devision.  For this particular project, I been chosen to co-lead a project with Cardinal Health.  The topic of this project will be
               cybersecurity, specifically how Cardinal Health should approach security as code in there attempt to protect thier business.  My responsibilities for this project include scheduling team meetings, directing the thought process of the
               team, and selecting the travel team.  On December 1st, we will travel down to Dublin, Ohio to present our project to a group of employees at Cardinal Health</p>
             </div>
@@ -130,7 +130,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">National Science Foundation Research Grant</h3>
               <div class="subheading mb-3">National Tsing Hua University, Taiwan</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <p>Over the summer of 2017, I spent my time in Taiwan working under a Research Grant from professor Yiyu Shi at the University of Notre Dame.  8 studnets fromt Notre Dame made the trip over and we spent our time working on the topic of
+              machine learning.  I began the project by learning python using the CodeAcademy course on the language.  From there, we began working on a chatbot built with tensor flow.  We uesd a online server service called Codalab to increase computing
+              power.  We began looking at ways to improve the accuracy of the code, but due to the difficulty of the project we only made small changes to the source code.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">December 2011 - March 2013</span>
@@ -141,7 +143,10 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Semester Project with Mercatus</h3>
               <div class="subheading mb-3">Student International Business Council, University of Notre Dame</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <p>In the spring of 2017, I worked on a Student International Business Council project in the Stem Division.  I was chosen to co-lead this project with another Notre Dame student.  We were partnered with Mercauts INC a software service
+              provider based in San Francisco.  The topic for this project was gamification, and how Mercauts could implement a new tutorial system in their software service to increase customer useage, specifically in the first three months of service.
+              Our final recomendation included a step by step tutorial, paired with a badge system, scoreboards, and quizes.  We travled to Mercatus' headquarters and made the ptich to a group of employees and recieved feedback on our presentation as well
+              as our pitch.  This was my first experience with leading a team and I gained much valuable experience.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Spring 2017</span>
@@ -152,7 +157,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Student Government Involvement</h3>
               <div class="subheading mb-3">University of Notre Dame Student Government Campus Technology Board</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+              <p>Over the past year, I have been working for Student Government on the Campus Technology Board.  This is the division of Student Government focused on techonlogy, as implied.  I have been involved in several projects during this time 
+              including the yearly tech survey, a redisgn of the Notre Dame mobile app, and creation of a Facebook page to be used as a student forum and suggestion box for Student Government.  For the campus survey, I lead the group and managed to
+              get over two thousand replies, over a quarter of the undergraduate student body.  </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Spring 2017 - Present</span>
@@ -163,7 +170,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Website Development</h3>
               <div class="subheading mb-3">using a Bootstrap Template</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+              <p>Over the summer I took a CodeAcademy couse in HTML.  In order to gain some practical experience, I decided to build a website.  I was told about Bootstrap by a friend and decided to devote some spair tie to it.
+              Bootstrap provides an outline of HTHML code, which I then went in and modified.  This website is the result of that sparetime.  This experince has been very enjoyable and has given me some very practical experience.
+              </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Fall 2017</span>
