--- a/index.html
+++ b/index.html
@@ -183,8 +183,9 @@
                   <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Semester Project with PWC</h3>
-              <div class="subheading mb-3">Student International Business Council, University of Notre Dame</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <div class="subheading mb-3"><a href="http://sibc.nd.edu/">Student International Business Council</a>, University of Notre Dame</div>
+              <p>The fall semester of my sophomore year, I began my SIBC experience with the a project in the Stem Division.  For this project, we were given a set of data from a mock insurance company.  We then analyzed the data
+              and created a pitch on how the company could increase profit.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Fall 2016</span>
