--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Sean
-            <span class="text-primary">Scannell</span>
+            <span class="text-#000080">Scannell</span>
           </h1>
           <div class="subheading mb-5">228 O'Neill Hall · Jniversity of Notre, IN 46556 · (716) 697-4180 ·
             <a href="mailto:sscanne2@nd.edu">sscanne2@nd.edu</a>
