--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Sean
-            <span class="text-#000080">Scannell</span>
+            <span style="color: #000080">Scannell</span>
           </h1>
           <div class="subheading mb-5">228 O'Neill Hall · Jniversity of Notre, IN 46556 · (716) 697-4180 ·
-            <a href="mailto:sscanne2@nd.edu">sscanne2@nd.edu</a>
+            <a href="mailto:sscanne2@nd.edu" style="color: #000080">sscanne2@nd.edu</a>
           </div>
           <p class="mb-5">GENERAL STATEMENT:I am a Junior Electrical Engineering student at the University of Notre Dame.  Originally I am from Cork, Ireland.  My family moved to Buffalo, New York when I was seven.  I have travaled the world, including a summer in Taiwan and plan on studying abroad in Perth Australia in the Spring of 2018.</p>
           <ul class="list-inline list-social-icons mb-0">
