--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h1 class="mb-0">Sean
             <span style="color: #000080">Scannell</span>
           </h1>
-          <div class="subheading mb-5">228 O'Neill Hall · Jniversity of Notre, IN 46556 · (716) 697-4180 ·
+          <div class="subheading mb-5">228 O'Neill Hall · University of Notre Dame, IN 46556 · (716) 697-4180 ·
             <a href="mailto:sscanne2@nd.edu" style="color: #000080">sscanne2@nd.edu</a>
           </div>
           <p class="mb-5">GENERAL STATEMENT:I am a Junior Electrical Engineering student at the University of Notre Dame.  Originally I am from Cork, Ireland.  My family moved to Buffalo, New York when I was seven.  I have travaled the world, including a summer in Taiwan and plan on studying abroad in Perth Australia in the Spring of 2018.</p>
