--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/sean-scannell-8780b3144/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -98,7 +98,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://github.com/scannellstp">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -287,8 +287,10 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <p>My interests include traveling, sports, and reading.  I have made multiple trips to Ireland to visit family, visited Asia three times, and I have plans to go to Australia for my study abroad program.  In regards tot he asia trips, My first trip was a sprign break
+            visit to see Shanghai and Beijing.  THe next time I went, I spent eleven weeks in Taiwan at the National Tsing Hua University in Hsinchu, Taiwan.  My third visit was a school club trip to do a case study on AI and Bitcoin with the 
+            students at Pekin University.  I hope to vist six continents by the time I am twenty five and after this spring I will have only Australia and South America left.</p>
+          <p class="mb-0">I am also a avid sports fan, supporting all Buffalo sports as well as Munster Rugby and Manchester United.  ALso, I am a avid reader, and have recently finished tatoos on the heart, which was a interesting and exciting read.</p>
         </div>
       </section>
 
