--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <a href="#">
-              <img class="img-fluid" src="img/post-sample-image.jpg" alt="">
+              <img class="img-fluid" src="img/Sean T Scannell1 (1).jpg" alt="">
             </a>
             <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
           <p>I am a student Electrical Engineering student at the University of Notre Dame. Originally I am from Cork, Ireland. My family moved to Buffalo, New York when I was seven. I have travaled the world, including a summer in Taiwan and plan on studying abroad in Perth Australia in the Spring of 2018.</p>
