--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
           <a href="#">
               <img class="img-fluid" src="img/Sean T Scannell1 (1).jpg" alt="">
             </a>
-            <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
+            <span class="caption text-muted">September 2018</span>
           <p>I am a student Electrical Engineering student at the University of Notre Dame. Originally I am from Cork, Ireland. My family moved to Buffalo, New York when I was seven. I have travaled the world, including a summer in Taiwan and plan on studying abroad in Perth Australia in the Spring of 2018.</p>
           <p>My name is Sean Scannell and I am a student at the University of Notre Dame.  I was born in Stuttgart Germany, but I live in Buffalo, New York now.  I am an American and Irish dual citizen.  I am currently in the fourth of a five year dual-degree program in electrical engineering and business.  I will graduate in 2020 with a bachelors in electrical engineering and a Master's in business administration.</p>
           <p>I am an avid fan of rugby, specifically the Irish national rugby team and the munster club team.  I attended the game where Ireland beat New Zealand for the first time ever in 2016 at Soldier field in Chicago.  I am also very interested in traveling.  I have been to 4 continents, including North America, Europe, Asia, and Australia.  I hope to visit all 7 continents one day.</p>
