--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <hr>
           <!-- Pager -->
           <div class="clearfix">
-            <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+            <a class="btn btn-primary float-right" href="index2.html">Older Posts &rarr;</a>
           </div>
         </div>
       </div>
