--- a/index2.html
+++ b/index2.html
@@ -126,7 +126,7 @@
           <hr>
           <!-- Pager -->
           <div class="clearfix">
-            <a class="btn btn-primary float-left" href="index.html">Newer Posts &rarr;</a>
+            <a class="btn btn-primary float-left" href="index.html">Newer Posts &larr;</a>
           </div>
           <div class="clearfix">
             <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
