--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <a href="https://www.linkedin.com/in/sean-tadhg-scannell/">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                    <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
