--- a/MBAyear1.html
+++ b/MBAyear1.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/Group Photo 1.jpg')">
+    <header class="masthead" style="background-image: url('img/Group Photo 1.JPG')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -85,7 +85,7 @@
             and I was accepted.  
             </p>
              <a href="#">
-              <img class="img-fluid" src="img/Group Photo 1.jpg" alt="">
+              <img class="img-fluid" src="img/Group Photo 1.JPG" alt="">
             </a>
             <span class="caption text-muted">The University of Notre Dame's MBA class of 2020.</span>
             <p>For the fall of 2018, I am taking Financial Accounting, Corporate Finance, Foundations of Business Ethics, Career Leadership, and Business Statistics.  These are going well and have been an interesting exposure to the business world.
