--- a/PerthSemester.html
+++ b/PerthSemester.html
@@ -89,10 +89,6 @@
             During my time in Bali, my favorite day was the third day we were there.  On this day, we woke up at 3:00 am and took a cab to a mountain near the center of the island.  We then hiked a mountain and watched the sunrise from the top of the mountain, which was a fantastic view (shown below).  After that, we hiked down the mountain and went to a natural hotspring spa to relax after the hike. 
             At this point it was lunchtime, so our tourguides took us to a local resteraunt with an all-you-can eat buffet.  From there, we headed to a coffee plantation and learned about the coffee industry in Bali.  We finished the day off by eating dinner and listening to live music in our hotel.  It was one of my favorite days of the semester, and possible of my college experience.
             </p>
-
-            <p>Placeholder text by
-              <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by
-              <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
           </div>
         </div>
       </div>
@@ -107,15 +103,15 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <ul class="list-inline text-center">
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/sean-tadhg-scannell/">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                    <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/sean.scannell.3">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
@@ -123,7 +119,7 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://github.com/scannellstp">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fab fa-github fa-stack-1x fa-inverse"></i>
