--- a/SIBCCardinalHealth.html
+++ b/SIBCCardinalHealth.html
@@ -77,8 +77,9 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <p>Paragraph 1</p>
 
-            <h2 class="section-heading">The Final Frontier</h2>
-
+            <h2 class="section-heading">Context</h2>
+            <p>The first semester of my Junior year, I was chosen to co-lead another <a href="https://sibc.nd.edu/">Student International Business Council</a> project, this time with Cardinal Health.  (
+            
             <p> </p>
             <a href="#">
               <img class="img-fluid" src="img/SIBC_Cardinal_health_photo.jpg" alt="">
