--- a/SIBCCardinalHealth.html
+++ b/SIBCCardinalHealth.html
@@ -42,9 +42,6 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post.html">Sample Post</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
@@ -78,9 +75,9 @@
             <p>Paragraph 1</p>
 
             <h2 class="section-heading">Context</h2>
-            <p>The first semester of my Junior year, I was chosen to co-lead another <a href="https://sibc.nd.edu/">Student International Business Council</a> project, this time with Cardinal Health.  (
-            
-            <p> </p>
+            <p>The first semester of my Junior year, I was chosen to co-lead another <a href="https://sibc.nd.edu/">Student International Business Council</a> project, this time with Cardinal Health.
+              
+            </p>
             <a href="#">
               <img class="img-fluid" src="img/SIBC_Cardinal_health_photo.jpg" alt="">
             </a>
