--- a/PerthSemester.html
+++ b/PerthSemester.html
@@ -77,9 +77,12 @@
             <h2 class="section-heading">Trip to New Zealand</h2>
 
             <p>During my time in Australia, I made two major trips.  The first of these trips was to New Zealand during my fall break.  My father met me in New Zealand and we spent the week traveling around the north island.  Some of the major highlights include a visit to Hobbiton, hiking several mountains, going para-sailing, and visiting a Maori village.  New Zealand is a beautiful country, with amazing scenery and friendly people.  There was something new around every corner.  At one point, my father and I watched a 
-            speed sheering compititions, where locals and international farmers raced to see who could sheer a sheep the fastest.  I hope to make it back again some day.</p>
+            speed sheering compititions, where locals and international farmers raced to see who could sheer a sheep the fastest.</p>  
+            <p>Some economic observations I made is just how prevelant the tourism industry is in New Zealand.  This could be either due to the fact that the tourism industry is big in New Zealand, or that I saw mainly tourist focused businesses because I was a tourist.  According to <a href="https://www.tourismnewzealand.com/about/about-the-industry/">Tourism New Zealand</a>, tourism employed 7.5% of the workforce in 2016, and contributed $12.9 billion, or 5.6% of GDP.  
+            Some of the other major industries are argicultural, horticultural, and mining.</p>
+            <p>I thouroughly enjoyed my time in New Zealand, and hope to go back some day.</p>
             <a href="#">
-              <img class="img-fluid" src="img/post-sample-image.jpg" alt="">
+              <img class="img-fluid" src="img/IMG_4786.JPG" alt="">
             </a>
             
 
@@ -89,6 +92,9 @@
             During my time in Bali, my favorite day was the third day we were there.  On this day, we woke up at 3:00 am and took a cab to a mountain near the center of the island.  We then hiked a mountain and watched the sunrise from the top of the mountain, which was a fantastic view (shown below).  After that, we hiked down the mountain and went to a natural hotspring spa to relax after the hike. 
             At this point it was lunchtime, so our tourguides took us to a local resteraunt with an all-you-can eat buffet.  From there, we headed to a coffee plantation and learned about the coffee industry in Bali.  We finished the day off by eating dinner and listening to live music in our hotel.  It was one of my favorite days of the semester, and possible of my college experience.
             </p>
+            <a href="#">
+              <img class="img-fluid" src="img/IMG_2193.JPG" alt="">
+            </a>
           </div>
         </div>
       </div>
