--- a/SIBCJapantrip.html
+++ b/SIBCJapantrip.html
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('IMG_8736.JPG')">
+    <header class="masthead" style="background-image: url('DSC_2487.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
