--- a/SIBCJapantrip.html
+++ b/SIBCJapantrip.html
@@ -79,7 +79,7 @@
             and the Student Activities Office. Once we got through the all of that logistic planning we got waited for the travel date to arrive.</p>
             
             
-            <h2 class="section-heading">Planning the trip</h2>
+            <h2 class="section-heading">The trip</h2>
             <p>
               We flew out on Sunday the 14th of October and arrived on Monday the 15th due to the date change.  We then checked into the hotel and spent that evening unpacking and decompressing after the flight.  Tuesday morning we met with a Notre Dame Alumnus who worked at Kobelco, a construction equipment company.
               They have a very distinctive color scheme of royal blue and are very prevelant in Japan.  We learned about Kobelco's business in Japan and that the equipment being used to build the 2020 Olympic games was made by them.  Later that day, we visited the Edo Tokyo Museum and learnt the history of the Tokyo
