--- a/SIBCJapantrip.html
+++ b/SIBCJapantrip.html
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('ing/DSC_2487.jpg')">
+    <header class="masthead" style="background-image: url('img/DSC_2487.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
