--- a/SIBCJapantrip.html
+++ b/SIBCJapantrip.html
@@ -105,6 +105,16 @@
               through approving new products for the public.  
             </p>
             <h2 class="section-heading">Reflections</h2>
+            <p>After this week long trip to Japan, I had some rather large takeaways.  The first of these is not something that I observed, but something I learned.  At Abbott, we learned that Japans birth rate is currently sitting a little under 1.5 births per woman.  
+              This was confirmed by a quick google search and reading <a href='https://data.worldbank.org/indicator/SP.DYN.TFRT.IN'> the World Banks </a> data on the subject.  This extremely low rate has already caused some problems in Japan, but as time goes on
+              Japan will face some serious challenges unless it opens its boarders to immigrants.  
+            </p>
+            <p>Secondly, I observed that Japanese people are extremely polite, to the point of being conflict adverse.  One of the most notable instances of this is the subway.  The majority of city subways are loud, noisy affairs.  Not so in Tokyo.  In both the Subway
+              and the JR line, there is almost nothing spoken.  It was a little erie to be honest.  As Americans, it was a struggle for my group to get used to being quiet on trains.  THis politenes extends into the business world as well.  Some of the companies that we 
+              meet with at Kobelco told us that Japanese employees are less likely to state their opinion so as to avoid sounding confrontational, a foreign thought to many Americans.  However, this is a case where I believe that politeness could get in the way of
+              idea sharing which is detremental for companies. 
+            </p>
+            
  
             
           </div>
