--- a/MBAyear1.html
+++ b/MBAyear1.html
@@ -87,8 +87,16 @@
             <span class="caption text-muted">The University of Notre Dame's MBA class of 2020.</span>
             <p>For the fall of 2018, I am taking Financial Accounting, Corporate Finance, Foundations of Business Ethics, Career Leadership, and Business Statistics.  These are going well and have been an interesting exposure to the business world.  This has been extremely beneficial to me as I am exposed to a 
               wide variety stories from all of my classmates.  There are veterans, consultants, sales personal, engineers, etc.  The class has been divided into learning teams comprised of 5 members.  These teams work together on homework assignments and form study groups for the semester to build a team based mentality 
-              in the MBA class, an idea I agree with whole-heartedly.  I will post updates as the semester continues.
+              in the MBA class, an idea I agree with whole-heartedly.
             </p>
+            <p>The module ended on October 4th with final exams.  At the end of this module, I averaged approximately a 3.33 GPA.  After some reflection, I find this unsatisfactory and will strive more in the second half of the semester to raise this.
+            <h2 class'"section-heading">Module 2</h2>
+               <p>For module 2, I will be taking Marketing Management, Strategic Decision Making, Financial Accounting 2, and Managerial Economics.  The only continuation from last module is accoutning, which is beign taught by the same professor.  The
+                      rest are new topics and I am exictied to get into these topics.
+                      </p>
+               <p>When it comes to expectations, I am have several.  In terms of academics, I hope to get above a 3.7 GPA this semester.  With this in mind, I will put more hours into studyign throughout the semester instead of focusing in during the final
+                      week before exams.  I also hope to get involved more with the consulting club to get a foothold in the consulting field.  I also plan on renewing my envolvement in SIBC for the coming academic year, but I have yet to discern in what facet.
+                      </p>
           </div>
         </div>
       </div>
