--- a/SIBCJapantrip.html
+++ b/SIBCJapantrip.html
@@ -104,6 +104,9 @@
               to the semi-private health care system present in the United States.  Because of this, Japanese people on average make over double the number of visits to the doctor that Americans.  We also learned about the process of working with the government
               through approving new products for the public.  
             </p>
+            <a href='#'>
+              <img class="img-fluid" src="img/Walking in Japan Pic.JPG" alt="">
+            </a>
             <h2 class="section-heading">Reflections</h2>
             <p>After this week long trip to Japan, I had some rather large takeaways.  The first of these is not something that I observed, but something I learned.  At Abbott, we learned that Japans birth rate is currently sitting a little under 1.5 births per woman.  
               This was confirmed by a quick google search and reading <a href='https://data.worldbank.org/indicator/SP.DYN.TFRT.IN'> the World Banks </a> data on the subject.  This extremely low rate has already caused some problems in Japan, but as time goes on
