--- a/SIBCJapantrip.html
+++ b/SIBCJapantrip.html
@@ -107,6 +107,7 @@
             <a href='#'>
               <img class="img-fluid" src="img/Walking in Japan Pic.JPG" alt="">
             </a>
+            <span class="caption text-muted">On our way to a company meeting.</span>
             <h2 class="section-heading">Reflections</h2>
             <p>After this week long trip to Japan, I had some rather large takeaways.  The first of these is not something that I observed, but something I learned.  At Abbott, we learned that Japans birth rate is currently sitting a little under 1.5 births per woman.  
               This was confirmed by a quick google search and reading <a href='https://data.worldbank.org/indicator/SP.DYN.TFRT.IN'> the World Banks </a> data on the subject.  This extremely low rate has already caused some problems in Japan, but as time goes on
