--- a/index2.html
+++ b/index2.html
@@ -127,8 +127,9 @@
           <!-- Pager -->
           <div class="clearfix">
             <a class="btn btn-primary float-left" href="index.html">&larr; Newer Posts</a>
-            <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+            <a class="btn btn-primary float-right" href="index3.html">Older Posts &rarr;</a>
           </div>
+          
         </div>
       </div>
     </div>
