--- a/Indexes/index3.html
+++ b/Indexes/index3.html
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('../img/Aerial_photo_of_Buffalo,_NY_Skyline.jpg')">
+    <header class="masthead" style="background-image: url('img/Aerial_photo_of_Buffalo,_NY_Skyline.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
