--- a/Indexes/index2.html
+++ b/Indexes/index2.html
@@ -126,8 +126,8 @@
           <hr>
           <!-- Pager -->
           <div class="clearfix">
-            <a class="btn btn-primary float-left" href="index.html">&larr; Newer Posts</a>
-            <a class="btn btn-primary float-right" href="Indexes/index3.html">Older Posts &rarr;</a>
+            <a class="btn btn-primary float-left" href="../index.html">&larr; Newer Posts</a>
+            <a class="btn btn-primary float-right" href="index3.html">Older Posts &rarr;</a>
           </div>
           
         </div>
