--- a/pages/MBAyear1.html
+++ b/pages/MBAyear1.html
@@ -11,15 +11,15 @@
     <title>MBA Module 1</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="/css/clean-blog.min.css" rel="stylesheet">
 
   </head>
 
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/Group Photo 1.JPG')">
+    <header class="masthead" style="background-image: url('/img/Group Photo 1.JPG')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -82,7 +82,7 @@
             
             <h2 class="section-heading">The Start</h2>
              <a href="#">
-              <img class="img-fluid" src="img/Group Photo 1.JPG" alt="">
+              <img class="img-fluid" src="/img/Group Photo 1.JPG" alt="">
             </a>
             <span class="caption text-muted">The University of Notre Dame's MBA class of 2020.</span>
             <p>For the fall of 2018, I am taking Financial Accounting, Corporate Finance, Foundations of Business Ethics, Career Leadership, and Business Statistics.  These are going well and have been an interesting exposure to the business world.  This has been extremely beneficial to me as I am exposed to a 
@@ -90,11 +90,11 @@
               in the MBA class, an idea I agree with whole-heartedly.
             </p>
             <p>The module ended on October 4th with final exams.  At the end of this module, I averaged approximately a 3.33 GPA.  After some reflection, I find this unsatisfactory and will strive more in the second half of the semester to raise this.
-            <h2 class'"section-heading">Module 2</h2>
-               <p>For module 2, I will be taking Marketing Management, Strategic Decision Making, Financial Accounting 2, and Managerial Economics.  The only continuation from last module is accoutning, which is beign taught by the same professor.  The
+            <h2 class="section-heading">Module 2</h2>
+            <p> For module 2, I will be taking Marketing Management, Strategic Decision Making, Financial Accounting 2, and Managerial Economics.  The only continuation from last module is accoutning, which is beign taught by the same professor.  The
                       rest are new topics and I am exictied to get into these topics.
                       </p>
-               <p>When it comes to expectations, I am have several.  In terms of academics, I hope to get above a 3.7 GPA this semester.  With this in mind, I will put more hours into studyign throughout the semester instead of focusing in during the final
+            <p>When it comes to expectations, I am have several.  In terms of academics, I hope to get above a 3.7 GPA this semester.  With this in mind, I will put more hours into studyign throughout the semester instead of focusing in during the final
                       week before exams.  I also hope to get involved more with the consulting club to get a foothold in the consulting field.  I also plan on renewing my envolvement in SIBC for the coming academic year, but I have yet to discern in what facet.
                       </p>
           </div>
@@ -133,11 +133,11 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/clean-blog.min.js"></script>
+    <script src="/js/clean-blog.min.js"></script>
 
   </body>
 
