--- a/pages/SIBCJapantrip.html
+++ b/pages/SIBCJapantrip.html
@@ -11,15 +11,15 @@
     <title>SIBC Board Trip to Japan</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="/css/clean-blog.min.css" rel="stylesheet">
 
   </head>
 
@@ -36,13 +36,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/DSC_2487.jpg')">
+    <header class="masthead" style="background-image: url('/img/DSC_2487.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -87,7 +87,7 @@
               including a ninja village and a rural Japanese town.  
             </p>
             <a href='#'>
-              <img class="img-fluid" src="img/DSC_2487.jpg" alt="">
+              <img class="img-fluid" src="/img/DSC_2487.jpg" alt="">
             </a>
             <span class="caption text-muted">A group picture in the rural village</span>
             <p>Thursday, we had two visits, both with Notre Dame Alumni.  In the morning, we visited a professor and discussed Federal Service Officers and their career paths.  That afternoon, we visited Louis Vuitton's headquarters in Japan.  At Louis Vuitton, we
@@ -96,7 +96,7 @@
               other type of screw is a sign of a counterfeit.
             </p>
             <a href='#'>
-              <img class="img-fluid" src="img/IMG_8676.jpg" alt="">
+              <img class="img-fluid" src="/img/IMG_8676.jpg" alt="">
             </a>
             <span class="caption text-muted">Louis Vuitton logo</span>
             <p>
@@ -105,7 +105,7 @@
               through approving new products for the public.  
             </p>
             <a href='#'>
-              <img class="img-fluid" src="img/Walking in Japan Pic.JPG" alt="">
+              <img class="img-fluid" src="/img/Walking in Japan Pic.JPG" alt="">
             </a>
             <span class="caption text-muted">On our way to a company meeting.</span>
             <h2 class="section-heading">Reflections</h2>
@@ -158,11 +158,11 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/clean-blog.min.js"></script>
+    <script src="/js/clean-blog.min.js"></script>
 
   </body>
 
